--- a/Express/Blog/views/blog_new.jade
+++ b/Express/Blog/views/blog_new.jade
@@ -9,6 +9,6 @@ block content
                 input(type="text", name="title", id="editArticleTitle")
             div
                 span Body :
-                textarea( name="body", rows=20, id="editArticleBody)
+                textarea( name="body", rows=20, id="editArticleBody")
             div#editArticleSubmit
                 input(type="submit", value="Send")
